# ngsolve-addon-template

./: .gitignore  CMakeLists.txt  README.md  ngsolve_addon.cmake  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  pypi.yml
demos/: EigH2x2.ipynb  exploremesh.ipynb  exploremesh.py
src/: __init__.py  explore_mesh.cpp  my_coefficient.hpp  my_ngsolve_addon.cpp  ngsolve_addon_template.cpp
tests/: test_my_ngsolve_addon.py  test_ngsolve_addon_template.py
